<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.ponchitaz.comicsdowry.MainPageRecyclerAdapter"
    android:layout_width="match_parent"
    android:id="@+id/main_comics_card"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <android.support.constraint.ConstraintLayout
    android:id="@+id/comicsListingForMainList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:contentDescription="@string/comicsListingForMainList"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">

    <ImageView
        android:id="@+id/comicsPicture"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/comicsPic"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/splash_screen" />

    <TextView
        android:id="@+id/comicsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/comicsTtl"
        android:text="@string/comicsTtl"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/comicsPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comicsAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/comicsAuth"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/comicsPicture"
        app:layout_constraintTop_toBottomOf="@id/comicsTitle" />

    <Button
        android:id="@+id/addToShelfButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addToShelfBtn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addToWishlistButton"
        app:layout_constraintStart_toEndOf="@id/comicsPicture"
        app:layout_constraintTop_toBottomOf="@id/comicsAuthors"/>

    <Button
        android:id="@+id/addToWishlistButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/addToWishlistBtn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comicsAuthors"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</LinearLayout>